Fix box score link alignment.
Supplemental actions are supposed to go on the bottom of the card. Forcing a min-height on the card itself causes a gap to appear after the supplemental actions.

--- a/react-bqbl-fe/src/components/reusable/TeamScoreCard/TeamScoreCard.module.css
+++ b/react-bqbl-fe/src/components/reusable/TeamScoreCard/TeamScoreCard.module.css
@@ -1,7 +1,6 @@
 .teamScoreCard {
   margin: 10px;
   width: 300px;
-  min-height: 300px;
   position: relative;
   display: inline-block;
   vertical-align: top;
@@ -30,6 +29,10 @@
   left: 0;
   right: 0;
   min-height: 110px;
+}
+
+.scoreComponentList {
+  min-height: 100px;
 }
 
 .total {
